deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstor-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petstore-app
  template:
    metadata:
      labels:
        app: petstore-app
    spec:
      containers:
        - name: petstore-app
          image: shubhz1452/petshop-pipeline:1.1.0-10
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "500m"
          ports:
            - containerPort: 3000
