service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petstore-service
  namespace: petstore
  labels:
    app: petstore-app 
spec:
  selector:
    app: petstore-app

  ports:
    - port: 8080
      targetPort: 8080

  type: LoadBalancer
