demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-ingress
  namespace: petstore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx
  rules:
  - host: test.shubhamk.online   
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petstore-service
            port:
              number: 8080
