ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petapp-ingress
  namespace: petstore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "production-app"
spec:
  tls:
  - hosts:
    - test.shubhamk.online
    secretName: petapp
  ingressClassName: nginx
  rules:
  - host: test.shubhamk.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petstore-service
            port:
              number: 8080
